Compilers/eSeWaccEditor/src/antlr/WaccParser.java
// Generated from ./WaccParser.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WaccParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PRINT=32, PAIR_LIT=6, NEWPAIR=21, DO=40, INT_LIT=50, SINGLEQUOTE=12, MINUS=42, 
		UNARY_OP=43, SEMICOLON=38, ELSE=36, ID=49, IF=34, DONE=41, FST=19, IS=26, 
		READ=28, OPEN_PAREN=9, END=25, THEN=35, CLOSE_PAREN=10, EXIT=31, CALL=22, 
		FI=37, CHAR_LIT=5, PRINTLN=33, SND=20, CLOSE_BRACKET=8, CHAR=15, BEGIN=24, 
		FREE=29, COMMENT=2, DOUBLEQUOTE=11, INT=13, RETURN=30, SKIP=27, WS=1, 
		COMMA=23, EQUALS=18, BOOL_LIT=3, OPEN_BRACKET=7, STRING_LIT=4, BIN_OP0=44, 
		BOOL=14, STRING=16, WHILE=39, BIN_OP1=45, BIN_OP2=46, BIN_OP3=47, PAIR=17, 
		BIN_OP4=48;
	public static final String[] tokenNames = {
		"<INVALID>", "WS", "COMMENT", "BOOL_LIT", "STRING_LIT", "CHAR_LIT", "'null'", 
		"'['", "']'", "'('", "')'", "'\"'", "'''", "'int'", "'bool'", "'char'", 
		"'string'", "'pair'", "'='", "'fst'", "'snd'", "'newpair'", "'call'", 
		"','", "'begin'", "'end'", "'is'", "'skip'", "'read'", "'free'", "'return'", 
		"'exit'", "'print'", "'println'", "'if'", "'then'", "'else'", "'fi'", 
		"';'", "'while'", "'do'", "'done'", "'-'", "UNARY_OP", "BIN_OP0", "'+'", 
		"BIN_OP2", "BIN_OP3", "BIN_OP4", "ID", "INT_LIT"
	};
	public static final int
		RULE_start = 0, RULE_prog = 1, RULE_func = 2, RULE_param_list = 3, RULE_param = 4, 
		RULE_stat = 5, RULE_assign_lhs = 6, RULE_assign_rhs = 7, RULE_arg_list = 8, 
		RULE_pair_elem = 9, RULE_type = 10, RULE_base_type = 11, RULE_array_type = 12, 
		RULE_pair_type = 13, RULE_pair_elem_type = 14, RULE_expr = 15, RULE_array_elem = 16, 
		RULE_array_lit = 17;
	public static final String[] ruleNames = {
		"start", "prog", "func", "param_list", "param", "stat", "assign_lhs", 
		"assign_rhs", "arg_list", "pair_elem", "type", "base_type", "array_type", 
		"pair_type", "pair_elem_type", "expr", "array_elem", "array_lit"
	};

	@Override
	public String getGrammarFileName() { return "WaccParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WaccParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(WaccParser.EOF, 0); }
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36); prog();
			setState(37); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public TerminalNode BEGIN() { return getToken(WaccParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(WaccParser.END, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prog);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(39); match(BEGIN);
			setState(43);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(40); func();
					}
					} 
				}
				setState(45);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(46); stat(0);
			setState(47); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public int rs;
		public int ps;
		public TerminalNode ID() { return getToken(WaccParser.ID, 0); }
		public TerminalNode CLOSE_PAREN() { return getToken(WaccParser.CLOSE_PAREN, 0); }
		public TerminalNode IS() { return getToken(WaccParser.IS, 0); }
		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class,0);
		}
		public TerminalNode END() { return getToken(WaccParser.END, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode OPEN_PAREN() { return getToken(WaccParser.OPEN_PAREN, 0); }
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).exitFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); type();
			setState(50); match(ID);
			setState(51); match(OPEN_PAREN);
			setState(53);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << CHAR) | (1L << STRING) | (1L << PAIR))) != 0)) {
				{
				setState(52); param_list();
				}
			}

			setState(55); match(CLOSE_PAREN);
			setState(56); match(IS);
			setState(57); stat(1);
			setState(58); match(END);
			setState(59);
			if (!(_localctx.rs > 0)) throw new FailedPredicateException(this, "$rs > 0");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_listContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(WaccParser.COMMA); }
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(WaccParser.COMMA, i);
		}
		public Param_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).enterParam_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).exitParam_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitParam_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Param_listContext param_list() throws RecognitionException {
		Param_listContext _localctx = new Param_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); param();
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(62); match(COMMA);
				setState(63); param();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(WaccParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); type();
			setState(70); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public int x;
		public TerminalNode SEMICOLON() { return getToken(WaccParser.SEMICOLON, 0); }
		public TerminalNode ELSE() { return getToken(WaccParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(WaccParser.IF, 0); }
		public TerminalNode FREE() { return getToken(WaccParser.FREE, 0); }
		public TerminalNode READ() { return getToken(WaccParser.READ, 0); }
		public TerminalNode FI() { return getToken(WaccParser.FI, 0); }
		public TerminalNode DONE() { return getToken(WaccParser.DONE, 0); }
		public TerminalNode ID() { return getToken(WaccParser.ID, 0); }
		public TerminalNode EQUALS() { return getToken(WaccParser.EQUALS, 0); }
		public TerminalNode RETURN() { return getToken(WaccParser.RETURN, 0); }
		public TerminalNode DO() { return getToken(WaccParser.DO, 0); }
		public Assign_rhsContext assign_rhs() {
			return getRuleContext(Assign_rhsContext.class,0);
		}
		public TerminalNode SKIP() { return getToken(WaccParser.SKIP, 0); }
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode BEGIN() { return getToken(WaccParser.BEGIN, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode PRINT() { return getToken(WaccParser.PRINT, 0); }
		public TerminalNode THEN() { return getToken(WaccParser.THEN, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public TerminalNode WHILE() { return getToken(WaccParser.WHILE, 0); }
		public TerminalNode EXIT() { return getToken(WaccParser.EXIT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PRINTLN() { return getToken(WaccParser.PRINTLN, 0); }
		public TerminalNode END() { return getToken(WaccParser.END, 0); }
		public Assign_lhsContext assign_lhs() {
			return getRuleContext(Assign_lhsContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatContext(ParserRuleContext parent, int invokingState, int x) {
			super(parent, invokingState);
			this.x = x;
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat(int x) throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState(), x);
		enterRule(_localctx, 10, RULE_stat);
		int _la;
		try {
			setState(189);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72); match(SKIP);
				setState(75);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(73); match(SEMICOLON);
					setState(74); stat(_localctx.x);
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77); type();
				setState(78); match(ID);
				setState(79); match(EQUALS);
				setState(80); assign_rhs();
				setState(83);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(81); match(SEMICOLON);
					setState(82); stat(_localctx.x);
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(85); assign_lhs();
				setState(86); match(EQUALS);
				setState(87); assign_rhs();
				setState(90);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(88); match(SEMICOLON);
					setState(89); stat(_localctx.x);
					}
				}

				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(92); match(READ);
				setState(93); assign_lhs();
				setState(96);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(94); match(SEMICOLON);
					setState(95); stat(_localctx.x);
					}
				}

				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(98); match(FREE);
				setState(99); expr(0);
				setState(102);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(100); match(SEMICOLON);
					setState(101); stat(_localctx.x);
					}
				}

				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(104);
				if (!(_localctx.x == 0)) throw new FailedPredicateException(this, "$x == 0");
				setState(105); match(EXIT);
				setState(106); expr(0);
				setState(109);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(107); match(SEMICOLON);
					setState(108); stat(_localctx.x);
					}
				}

				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(111);
				if (!(_localctx.x == 1)) throw new FailedPredicateException(this, "$x == 1");
				setState(112); match(EXIT);
				setState(113); expr(0);
				((FuncContext)getInvokingContext(2)).rs++;
				setState(117);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(115); match(SEMICOLON);
					setState(116); stat(_localctx.x);
					}
				}

				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(119); match(PRINT);
				setState(120); expr(0);
				setState(123);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(121); match(SEMICOLON);
					setState(122); stat(_localctx.x);
					}
				}

				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(125); match(PRINTLN);
				setState(126); expr(0);
				setState(129);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(127); match(SEMICOLON);
					setState(128); stat(_localctx.x);
					}
				}

				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(131);
				if (!(_localctx.x == 1)) throw new FailedPredicateException(this, "$x == 1");
				setState(132); match(RETURN);
				setState(133); expr(0);
				((FuncContext)getInvokingContext(2)).rs++;
				setState(137);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(135); match(SEMICOLON);
					setState(136); stat(_localctx.x);
					}
				}

				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(139);
				if (!(_localctx.x == 0)) throw new FailedPredicateException(this, "$x == 0");
				setState(140); match(RETURN);
				setState(141); expr(0);
				setState(144);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(142); match(SEMICOLON);
					setState(143); stat(_localctx.x);
					}
				}

				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(146);
				if (!(_localctx.x == 1)) throw new FailedPredicateException(this, "$x == 1");
				setState(147); match(IF);
				setState(148); expr(0);
				((FuncContext)getInvokingContext(2)).rs =  0;
				setState(150); match(THEN);
				setState(151); stat(_localctx.x);
				((FuncContext)getInvokingContext(2)).ps =  ((FuncContext)getInvokingContext(2)).rs; ((FuncContext)getInvokingContext(2)).rs =  0;
				setState(153); match(ELSE);
				setState(154); stat(_localctx.x);
				if(((FuncContext)getInvokingContext(2)).ps != ((FuncContext)getInvokingContext(2)).rs) {((FuncContext)getInvokingContext(2)).rs =  0;}
				setState(156); match(FI);
				setState(159);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(157); match(SEMICOLON);
					setState(158); stat(_localctx.x);
					}
				}

				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(161);
				if (!(_localctx.x == 0)) throw new FailedPredicateException(this, "$x == 0");
				setState(162); match(IF);
				setState(163); expr(0);
				setState(164); match(THEN);
				setState(165); stat(_localctx.x);
				setState(166); match(ELSE);
				setState(167); stat(_localctx.x);
				setState(168); match(FI);
				setState(171);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(169); match(SEMICOLON);
					setState(170); stat(_localctx.x);
					}
				}

				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(173); match(WHILE);
				setState(174); expr(0);
				setState(175); match(DO);
				setState(176); stat(_localctx.x);
				setState(177); match(DONE);
				setState(180);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(178); match(SEMICOLON);
					setState(179); stat(_localctx.x);
					}
				}

				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(182); match(BEGIN);
				setState(183); stat(_localctx.x);
				setState(184); match(END);
				setState(187);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(185); match(SEMICOLON);
					setState(186); stat(_localctx.x);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_lhsContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(WaccParser.ID, 0); }
		public Pair_elemContext pair_elem() {
			return getRuleContext(Pair_elemContext.class,0);
		}
		public Array_elemContext array_elem() {
			return getRuleContext(Array_elemContext.class,0);
		}
		public Assign_lhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_lhs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).enterAssign_lhs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).exitAssign_lhs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitAssign_lhs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_lhsContext assign_lhs() throws RecognitionException {
		Assign_lhsContext _localctx = new Assign_lhsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assign_lhs);
		try {
			setState(194);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(191); match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(192); array_elem();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(193); pair_elem();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_rhsContext extends ParserRuleContext {
		public TerminalNode NEWPAIR() { return getToken(WaccParser.NEWPAIR, 0); }
		public TerminalNode ID() { return getToken(WaccParser.ID, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode CLOSE_PAREN() { return getToken(WaccParser.CLOSE_PAREN, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(WaccParser.COMMA, 0); }
		public TerminalNode CALL() { return getToken(WaccParser.CALL, 0); }
		public Pair_elemContext pair_elem() {
			return getRuleContext(Pair_elemContext.class,0);
		}
		public Arg_listContext arg_list() {
			return getRuleContext(Arg_listContext.class,0);
		}
		public Array_litContext array_lit() {
			return getRuleContext(Array_litContext.class,0);
		}
		public TerminalNode OPEN_PAREN() { return getToken(WaccParser.OPEN_PAREN, 0); }
		public Assign_rhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_rhs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).enterAssign_rhs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).exitAssign_rhs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitAssign_rhs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_rhsContext assign_rhs() throws RecognitionException {
		Assign_rhsContext _localctx = new Assign_rhsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assign_rhs);
		int _la;
		try {
			setState(213);
			switch (_input.LA(1)) {
			case BOOL_LIT:
			case STRING_LIT:
			case CHAR_LIT:
			case PAIR_LIT:
			case OPEN_PAREN:
			case MINUS:
			case UNARY_OP:
			case ID:
			case INT_LIT:
				enterOuterAlt(_localctx, 1);
				{
				setState(196); expr(0);
				}
				break;
			case OPEN_BRACKET:
				enterOuterAlt(_localctx, 2);
				{
				setState(197); array_lit();
				}
				break;
			case NEWPAIR:
				enterOuterAlt(_localctx, 3);
				{
				setState(198); match(NEWPAIR);
				setState(199); match(OPEN_PAREN);
				setState(200); expr(0);
				setState(201); match(COMMA);
				setState(202); expr(0);
				setState(203); match(CLOSE_PAREN);
				}
				break;
			case FST:
			case SND:
				enterOuterAlt(_localctx, 4);
				{
				setState(205); pair_elem();
				}
				break;
			case CALL:
				enterOuterAlt(_localctx, 5);
				{
				setState(206); match(CALL);
				setState(207); match(ID);
				setState(208); match(OPEN_PAREN);
				setState(210);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL_LIT) | (1L << STRING_LIT) | (1L << CHAR_LIT) | (1L << PAIR_LIT) | (1L << OPEN_PAREN) | (1L << MINUS) | (1L << UNARY_OP) | (1L << ID) | (1L << INT_LIT))) != 0)) {
					{
					setState(209); arg_list();
					}
				}

				setState(212); match(CLOSE_PAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arg_listContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(WaccParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(WaccParser.COMMA, i);
		}
		public Arg_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).enterArg_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaccParserListener ) ((WaccParserListener)listener).exitArg_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WaccParserVisitor ) return ((WaccParserVisitor<? extends T>)visitor).visitArg_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Arg_listContext arg_list() throws RecognitionException {
		Arg_listContext _localctx = new Arg_listContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arg_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(215); expr(0);
			setState(220);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(216); match(COMMA);
				setState(217); expr(0);
				}
				}
				setState(222);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
